GKE-project-k8s/rancher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
spec:
  type: ClusterIP
  selector:
    app: rancher
  ports:
  - port: 8080
    targetPort: 80
